--- a/views/blogpage.hbs
+++ b/views/blogpage.hbs
@@ -18,6 +18,7 @@
         <li>{{this.author}}</li>
         <li>{{this.category}}</li>
         <li>{{this.blog}}</li>
+        <button><a href="/delete/{{this.blogId}}">Delete</a></button>
         {{/each}}
     </ul>
 
