--- a/views/blogpage.hbs
+++ b/views/blogpage.hbs
@@ -19,6 +19,7 @@
         <li>{{this.category}}</li>
         <li>{{this.blog}}</li>
         <button><a href="/delete/{{this.blogId}}">Delete</a></button>
+        <button><a href="/update/{{this.blogId}}">update</a></button>
         {{/each}}
     </ul>
 
