--- a/views/blogpage.hbs
+++ b/views/blogpage.hbs
@@ -15,8 +15,8 @@
     <p>{{lastName}}</p> --}}
     <ul class="blogarr">
         {{#each blogarr}}
-        <li>{{this.author}}</li>
-        <li>{{this.category}}</li>
+        <li>{{this.name}}</li>
+        <li>{{this.Class}}</li>
         <li>{{this.blog}}</li>
         <button><a href="/delete/{{this.blogId}}">Delete</a></button>
         <button><a href="/update/{{this.blogId}}">update</a></button>
