--- a/views/updateblog.hbs
+++ b/views/updateblog.hbs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>update blog</title>
 </head>
+{{> navbar}}
 <body>
   
     <form action="/updateblog" method="post" >
@@ -18,9 +19,9 @@
 
 
         <label for="blog">Blog:-</label>
-        <textarea name="blog" id="blog" cols="30" rows="10"></textarea><br></br>
+        <textarea name="blog" id="blog" cols="30" rows="10" >{{updateblog.blog}}</textarea><br></br>
          
-        <input type="hidden" name="blogId" value="{{update.blogId}}">
+        {{!-- <input type="hidden" name="blogId" value="{{updateblog.blogId}}"> --}}
         <button type="submit">submit</button>
 
     </form>
