--- a/views/updateblog.hbs
+++ b/views/updateblog.hbs
@@ -21,7 +21,7 @@
         <label for="blog">Blog:-</label>
         <textarea name="blog" id="blog" cols="30" rows="10" >{{updateblog.blog}}</textarea><br></br>
          
-        {{!-- <input type="hidden" name="blogId" value="{{updateblog.blogId}}"> --}}
+        <input type="hidden" name="blogId" value="{{updateblog.blogId}}">
         <button type="submit">submit</button>
 
     </form>
